syntax = "proto3";

option csharp_namespace = "AElf.Kernel";

message SInt32Value
{
    sint32 value = 1;
}

message SInt64Value
{
    sint64 value = 1;
}